# manila-weka-driver

./: CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg  test-requirements.txt  tox.ini
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml  unit-tests.yml
ci/: bootstrap.sh  ci-report.sh  ci-runner.sh  ci-status.sh  collect-logs.sh  full-redeploy.sh  gerrit-listener.py  local.conf.template  post-results.sh  setup.sh  tempest-include.txt  weka-manila-ci-redeploy.service  weka-manila-ci-redeploy.timer  weka-manila-ci.service
devstack/: plugin.sh
docs/: api-mapping.md  configuration.md  deployment.md  known-issues.md
manila/: i18n.py
manila/common/: constants.py
manila/privsep/: __init__.py  weka.py
manila/share/: driver.py
manila/share/drivers/weka/: client.py  config.py  driver.py  exceptions.py  posix.py  utils.py
stubs/manila/: __init__.py  exception.py
stubs/manila/common/: constants.py
stubs/manila/privsep/: __init__.py
stubs/oslo_concurrency/: __init__.py  processutils.py
stubs/oslo_config/: __init__.py  cfg.py
stubs/oslo_log/: __init__.py  log.py
stubs/oslo_privsep/: __init__.py  capabilities.py  priv_context.py
stubs/oslo_utils/: __init__.py  units.py  uuidutils.py
tests/unit/: fakes.py  test_client.py  test_driver.py  test_posix.py  test_utils.py
