[metadata]
name = manila-weka-driver
version = 1.0.1
summary = OpenStack Manila share driver for Weka storage (WekaFS POSIX client)
description_file = README.md
author = Weka.IO
author_email = openstack@weka.io
home_page = https://github.com/weka/manila-weka-driver
license = Apache License, Version 2.0
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.11
    Topic :: Internet
    Topic :: System :: Filesystems
    Topic :: System :: Distributed Computing

[options]
packages = manila.share.drivers.weka
install_requires =
    requests>=2.25.0
    oslo.config>=8.0.0
    oslo.log>=4.0.0
    oslo.utils>=4.0.0
    oslo.concurrency>=4.0.0

[options.entry_points]
manila.share.drivers =
    weka = manila.share.drivers.weka.driver:WekaShareDriver

[flake8]
show-source = True
enable-extensions = H301,H306,H401,H403,H904
max-line-length = 79
extend-ignore = E501
exclude = .venv,.git,.tox,dist,doc,*egg,build

[pycodestyle]
max-line-length = 79
